--- a/wc.env
+++ b/wc.env
@@ -4,3 +4,4 @@ NEO4J_PASSWORD=Sztu2024!
 OPENAI_API_KEY=sk-Swi6dHHVWDY342vVaCwFLwmguz6YXfVlSXAfNxzukMtsScfP
 OPENAI_API_BASE=https://api.chatanywhere.tech/v1
 DATABASE=mysql+pymysql://root:Sztu2024!@nj-cdb-ejzzmfxj.sql.tencentcdb.com:63911/crawler
+PINECONE_API_KEY=d5669b77-f983-47c1-b0c5-19c336ebf533
